--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "next": "13.5.6",
     "react": "^18",
